--- a/style.css
+++ b/style.css
@@ -7,29 +7,123 @@
 
 body,
 html {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
-main{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+main {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: hsl(217, 54%, 11%);
+  padding: 1em;
+  overflow: scroll;
+}
+
+section {
+  background: hsl(216, 50%, 16%);
+  padding: 2em;
+  border-radius: 20px;
+  max-width: 370px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.image {
+  border-radius: 20px;
+  width: 100%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.equilibrium {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+  display: block;
+}
+.eye {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  z-index: 2;
+  background: hsla(178, 100%, 50%, 0.6);
+}
+.image:hover .eye {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Desc */
+.desc h1 {
+  color: hsl(0, 0%, 100%);
+  cursor: pointer;
+}
+.desc h1:hover {
+  color: hsl(178, 100%, 50%);
+  transition: all 0.2s;
+}
+.desc p {
+  color: hsl(215, 51%, 70%);
+  font-size: 18px;
+}
+.price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price h3 {
+  color: hsl(178, 100%, 50%);
+}
+hr {
+  border: 1px solid hsl(215, 32%, 27%);
+}
+
+/* Creator */
+.creator {
+  display: flex;
+  align-items: center;
+}
+.creator img {
+  width: 40px;
+  margin-right: 1em;
+  border: 1px solid white;
+  border-radius: 50px;
+}
+.creator p {
+  color: hsl(215, 51%, 70%);
+}
+.creator span {
+  color: hsl(0, 0%, 100%);
+  cursor: pointer;
+}
+.creator span:hover {
+  color: hsl(178, 100%, 50%);
+  transition: all 0.2s;
+}
+/* Extras */
+.mar {
+  margin-bottom: 1em;
 }
 
 /* * Colors */
 
 /* !Primary */
-.p{
-    color: hsl(215, 51%, 70%);
-    color: hsl(178, 100%, 50%)
+.p {
+  color: hsl(215, 51%, 70%);
+  color: hsl(178, 100%, 50%);
 }
 
 /* ! Neutral */
-.n{
-    color: hsl(217, 54%, 11%);
-    color: hsl(216, 50%, 16%);
-    color: hsl(215, 32%, 27%);
-    color: hsl(0, 0%, 100%);
+.n {
+  color: hsl(217, 54%, 11%);
+  color: hsl(216, 50%, 16%);
+  color: hsl(215, 32%, 27%);
+  color: hsl(0, 0%, 100%);
 }
